--- a/WebApplication3/WebApplication3.csproj
+++ b/WebApplication3/WebApplication3.csproj
@@ -128,8 +128,8 @@
     <Compile Include="App_Start\BundleConfig.cs" />
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
+    <Compile Include="Controllers\animationController.cs" />
     <Compile Include="Controllers\CreateAccountController.cs" />
-    <Compile Include="Controllers\DefaultController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\LoginController.cs" />
     <Compile Include="Controllers\PersonDetailsController.cs" />
@@ -217,6 +217,7 @@
     <Content Include="Views\SignIn\SignIn.cshtml" />
     <Content Include="Views\CreateAccount\CreateAccount.cshtml" />
     <Content Include="Views\PersonDetails\PersonDetails.cshtml" />
+    <Content Include="Views\animation\animation.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
