--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -8,32 +8,32 @@ trigger:
 
 pool:
   vmImage: ubuntu-latest
-jobs:
-- job: job1
-  steps:
-  - script: echo Hello, world!
-    displayName: 'Run a one-line script'
-
-  - script: |
-      echo Add other tasks to build, test, and deploy your project.
-      echo See https://aka.ms/yaml
-    displayName: 'Run a multi-line script'
-- job: job2
-  dependsOn: job1
-  steps:
-  - script: echo Job2
-    displayName: 'Run a one-line script'
-- job: job3
-  dependsOn: job2
-  steps:
-  - script: echo Job3
-    displayName: 'Run a one-line script'
-- job: job4
-  dependsOn: 
-  - job2
-  - job3
-  steps:
-  - script: echo Job4
-    displayName: 'Run a one-line script'
-
+stages:
+- stage: Build
+  jobs:
+  - job: firstjob
+    steps:
+    - bash: echo Build First Job
+  - job: Secondjob
+    steps:
+    - bash: echo Build Second Job
+- stage: DevDeploy
+  jobs:
+  - job: Devfirst
+    steps:
+    - bash: echo Dev First Job
+  - job: DevSecond
+    steps:
+    - bash: echo Dev Second Job
+- stage: QADeploy
+  jobs:
+  - job: QAjob
+    steps:
+    - bash: echo QA First Job
+- stage: ProdDeploy
+  jobs:
+  - job: Productionsjob
+    steps:
+    - bash: echo Production First Job
+    
 
