--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -18,6 +18,7 @@ stages:
     steps:
     - bash: echo Build Second Job
 - stage: DevDeploy
+  dependsOn: Build
   jobs:
   - job: Devfirst
     steps:
@@ -26,11 +27,15 @@ stages:
     steps:
     - bash: echo Dev Second Job
 - stage: QADeploy
+  dependsOn: Build
   jobs:
   - job: QAjob
     steps:
     - bash: echo QA First Job
 - stage: ProdDeploy
+  dependsOn: 
+  - DevDeploy
+  - QADeploy
   jobs:
   - job: Productionsjob
     steps:
